UX: Fix gap between categories

--- a/scss/layout/categories/category-boxes.scss
+++ b/scss/layout/categories/category-boxes.scss
@@ -1,5 +1,7 @@
-.category-boxes {
-  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+.category-boxes,
+.category-boxes-with-topics {
+  grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
+  gap: 1em;
 }
 .category-boxes .category-box,
 .category-boxes-with-topics .category-box {
@@ -9,7 +11,7 @@
   background: var(--stemaway-secondary-150);
   box-shadow: none;
   border-radius: 2px 2px 8px 8px;
-  margin: 2px 10px 20px;
+  margin: 2px;
 
   &:hover,
   &:focus {
